Update ChangeLog file

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,23 +3,31 @@
 
 * Add API for accessing incremental GC time limit with nanosecond precision
 * Add I_HOLD_LOCK assertion to expand_hp_inner and related functions
+* Add assertion that GC is initialized to base incremental_protection_needs
 * Add testing of GC_CALLOC/MALLOC_EXPLICITLY_TYPED (gctest)
 * Adjust formatting of numbered lists in README.md to match other .md files
 * Adjust highlighting of API prototypes in gcinterface.md
+* Adjust macro def/usage for AVR32, CRIS, NETBSD, OPENBSD, SH4 in gcconfig.h
 * Adjust printf calls in gctest check_heap_stats so that each has new-line
 * Allow incremental GC on Cygwin
 * Allow memory unmapping in case of MPROTECT_VDB
+* Check real-symbols are already initialized in pthread_join/detach
+* Comments reformatting in mark.c to properly delimit sentences
 * Eliminate 'hash_val value is never used' cppcheck false positive
 * Eliminate 'stop variable is always 0' compiler warning in print_callers
 * Enable compilation without C runtime (Win32)
 * Enable mprotect-based incremental GC for Linux/arm and Linux/aarch64
+* Enable true incremental collection even if parallel marker is on
+* Move QNX and Emscripten macro definitions to proper place in gcconfig.h
 * New API function to get size of object debug header
 * New macro (GCTEST_PRINT_VERBOSE) to enable verbose logging in test.c only
 * Print pid of child processes if verbose logging (gctest)
+* Refine flags field comment in pthread_support.h
 * Reformat gc.man (wrap long lines)
 * Remove 'current users' section from overview.md
 * Remove 'distributed ports', 'scalable versions' sections from overview.md
 * Remove Linux-specific commands for building cord/de from Makefile.direct
+* Remove Win32 main_thread static variable if threads discovery is disabled
 * Remove dash characters comprising prefix of some verbose logs (gctest)
 * Remove documentation specific to particular old BDWGC releases
 * Remove goto statement in print_callers (code refactoring)
@@ -28,7 +36,10 @@
 * Remove unused STACK_GRAN macro definitions (code refactoring)
 * Remove unused sparc_sunos4_mach_dep.s file
 * Replace "msecs" with "ms" in all comments and messages
+* Replace 'stack base' with 'stack bottom' in the documentation
 * Report time with a nanosecond precision where available
+* Simplify logged message in scratch_recycle
+* Simplify loops of collect_a_little/stopped_mark invoking mark_some
 * Update libgc.so version info to differentiate against v8.0.x
 * Update the ASCII diagrams describing the tree structure for pointer lookups
 * Update the documentation to match the current GC implementation
@@ -40,6 +51,7 @@
 * Workaround '__data_start<_etext is always false' cppcheck false positive
 * Workaround 'argument dummy to GC_noop1 is always 1' cppcheck false positive
 * Workaround 'checking if unsigned expression < 0' cppcheck warnings
+* Workaround 'duplicate expression for condition and assignment' cppcheck FP
 * Workaround 'identical inner return condition always true' cppcheck warning
 * Workaround 'if condition is the same as the previous one' cppcheck warnings
 * Workaround 'me assigned value never used' cppcheck FP in register_my_thread
