Update AUTHORS file (add Victor Romero)

--- a/AUTHORS
+++ b/AUTHORS
@@ -403,6 +403,7 @@ Ulrich Weigand <Ulrich.Weigand@de.ibm.com>
 Uros Bizjak <ubizjak@gmail.com>
 Vernon Lee <scorpion@rice.edu>
 Victor Ivrii <ivrii@math.toronto.edu>
+Victor Romero <romerosanchezv@gmail.com>
 Vitaly Magerya <vmagerya@gmail.com>
 Vladimir Tsichevski <wowa@jet.msk.su>
 Walter Bright <walter@walterbright.com>
