--- a/AUTHORS
+++ b/AUTHORS
@@ -280,6 +280,7 @@ Matthias Andree <matthias.andree@gmx.de>
 Matthias Drochner <M.Drochner@fz-juelich.de>
 Maurizio Vairani <maurizio.vairani@cloverinformatica.it>
 Max Mouratov <mmouratov@gmail.com>
+Maya Rashish <coypu@sdf.org>
 Melissa O'Neill <oneill@cs.sfu.ca>
 Michael Arnoldus <chime@proinf.dk>
 Michael DeRoy <deroymichael@gmail.com>
