Update AUTHORS file (add iarspider)

--- a/AUTHORS
+++ b/AUTHORS
@@ -185,6 +185,7 @@ Ian Searle <ians@eskimo.com>
 Igor Khavkine <i_khavki@alcor.concordia.ca>
 Ivan Demakov <ivan@tgrad.nsk.su>
 Ivan Maidanski <ivmai@mail.ru>
+Ivan R <iarspider@gmail.com>
 Jaap Boender <jaapb@netbsd.org>
 Jack Andrews <effbiae@gmail.com>
 Jacob Navia <jacob.navia@jacob.remcomp.fr>
