--- a/ChangeLog
+++ b/ChangeLog
@@ -408,7 +408,11 @@
 == [7.6.14] (not released yet) ==
 
 * Add support of OpenBSD/aarch64
+* Eliminate 'GC_old_bus_handler defined but not used' compiler warning
+* Eliminate 'unused function GC_add_map_entry' compiler warning
+* Eliminate 'while clause does not guard' GCC warning in GC_parse_map_entry
 * Explicitly zero-initialize trace_buf (fix trace_buf initialization)
+* Fix 'ulong undefined' compilation error on AIX
 * Fix MPROTECT_VDB definition for single-threaded GC builds
 * Fix OS_TYPE and USE_MMAP_ANON definitions for Cygwin/x64
 * Fix compiling by Makefile.direct on OpenBSD/UltraSparc
@@ -420,6 +424,7 @@
 * Fix various typos mostly in documentation files
 * Fix word size, data start and alignment for OpenBSD/mips64(el)
 * Remove a misleading comment about Solaris in gc.h
+* Workaround fread fail after enable_incremental if malloc redirected (Linux)
 
 
 == [7.6.12] 2019-03-01 ==
