--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 * Add API for accessing incremental GC time limit with nanosecond precision
 * Add I_HOLD_LOCK assertion to expand_hp_inner and related functions
 * Add assertion that GC is initialized to base incremental_protection_needs
+* Add cordtest, test_cpp, tracetest and disclaim tests (CMake)
 * Add testing of GC_CALLOC/MALLOC_EXPLICITLY_TYPED (gctest)
 * Adjust formatting of numbered lists in README.md to match other .md files
 * Adjust highlighting of API prototypes in gcinterface.md
@@ -11,38 +12,54 @@
 * Adjust printf calls in gctest check_heap_stats so that each has new-line
 * Allow incremental GC on Cygwin
 * Allow memory unmapping in case of MPROTECT_VDB
+* Build gc as a shared library by default (CMake)
 * Check real-symbols are already initialized in pthread_join/detach
 * Comments reformatting in mark.c to properly delimit sentences
+* Compile de test GUI app with resources (CMake)
+* Define STATIC macro to static by default
+* Do not build the tests by default (CMake)
+* Eliminate 'checking if unsigned i < 0' cppcheck FP in is_heap_base
 * Eliminate 'hash_val value is never used' cppcheck false positive
 * Eliminate 'stop variable is always 0' compiler warning in print_callers
+* Eliminate 'struct member os_callback is never used' cppcheck warning
 * Enable compilation without C runtime (Win32)
 * Enable mprotect-based incremental GC for Linux/arm and Linux/aarch64
 * Enable true incremental collection even if parallel marker is on
+* Generate cordtest and de executable files in GC base folder
+* Get rid of some non-ELF ifdefs (code refactoring)
 * Move QNX and Emscripten macro definitions to proper place in gcconfig.h
 * New API function to get size of object debug header
+* New API standalone functions to acquire and release the allocator lock
 * New macro (GCTEST_PRINT_VERBOSE) to enable verbose logging in test.c only
 * Print pid of child processes if verbose logging (gctest)
 * Refine flags field comment in pthread_support.h
 * Reformat gc.man (wrap long lines)
+* Reformatting and code refactoring of CMake script
 * Remove 'current users' section from overview.md
 * Remove 'distributed ports', 'scalable versions' sections from overview.md
 * Remove Linux-specific commands for building cord/de from Makefile.direct
 * Remove Win32 main_thread static variable if threads discovery is disabled
 * Remove dash characters comprising prefix of some verbose logs (gctest)
 * Remove documentation specific to particular old BDWGC releases
+* Remove gcmt-dll generation, rename libgc-lib.a to libgc.a (CMake)
 * Remove goto statement in print_callers (code refactoring)
 * Remove redundant options for building 'cord' in gc.mak
 * Remove redundant type casts in backgraph HEIGHT_UNKNOWN/IN_PROGRESS
 * Remove unused STACK_GRAN macro definitions (code refactoring)
 * Remove unused sparc_sunos4_mach_dep.s file
+* Rename cord/cord test executable to de (CMake)
 * Replace "msecs" with "ms" in all comments and messages
 * Replace 'stack base' with 'stack bottom' in the documentation
 * Report time with a nanosecond precision where available
 * Simplify logged message in scratch_recycle
 * Simplify loops of collect_a_little/stopped_mark invoking mark_some
+* Support header files installation (CMake)
+* Support most configure options in CMake script
+* Turn off C++ API by default, export it in gccpp library (CMake)
 * Update libgc.so version info to differentiate against v8.0.x
 * Update the ASCII diagrams describing the tree structure for pointer lookups
 * Update the documentation to match the current GC implementation
+* Upgrade cmake_minimum_required(version) to 3.1
 * Use KB/MB/GB abbreviations uniformly across entire documentation
 * Use atomic primitives for Sony PlayStation Portable 2 and PS4
 * Use better precision Windows timers
