--- a/ChangeLog
+++ b/ChangeLog
@@ -84,24 +84,33 @@
 * Avoid compiler warning about unused d in GC_CALLOC/MALLOC_EXPLICITLY_TYPED
 * Do not use Manual VDB mode if C malloc is redirected
 * Eliminate 'GC_old_bus_handler defined but not used' compiler warning
+* Eliminate 'comparing signed and unsigned values' BCC warning in cordtest
+* Eliminate 'possible loss of data' BCC and MS VC warnings
 * Eliminate 'unused function' compiler warnings (GC_add_map_entry, GC_lock)
 * Eliminate 'while clause does not guard' GCC warning in GC_parse_map_entry
 * Enable sbrk-to-mmap fallback on major supported Unix-like platforms
 * Explicitly zero-initialize trace_buf (fix trace_buf initialization)
 * Fix 'ISO C++17 does not allow dynamic exception spec' clang-8 error
+* Fix 'condition pred!=NULL is always true' compiler warning
 * Fix 'external linkage required for var because of dllimport' error on MinGW
 * Fix 'ulong undefined' compilation error on AIX
+* Fix 'wrong finalization data' gctest failure on Windows
 * Fix MPROTECT_VDB definition for single-threaded GC builds
 * Fix OS_TYPE and USE_MMAP_ANON definitions for Cygwin/x64
 * Fix build for OS X (CMake)
 * Fix building of shared library with C++ support on MinGW
 * Fix compiling by Makefile.direct on OpenBSD/UltraSparc
 * Fix configure message about 'AIX gcc optimization fix'
+* Fix cordtest build in SMakefile.amiga
 * Fix first_thread stack_base initialization if custom GC_stackbottom (Win32)
+* Fix gc_allocator.h compilation by Clang
 * Fix incorrect markup formatting in documentation
 * Fix mmap(PROT_NONE) failure on AIX
 * Fix printf format specifier in simple_example.md
 * Fix save_callers for multi-threaded case if built-in backtrace unavailable
+* Fix subexpression widening in memhash() of disclaim_weakmap_test
+* Fix test_cpp failure caused by arbitrary link order (Win32)
+* Fix test_cpp failure when gc_cpp resides in a dll (Borland, Watcom)
 * Fix various typos mostly in documentation files
 * Fix word size, data start and alignment for OpenBSD/mips64(el)
 * Refine GC_INIT documentation about its multiple invocation
@@ -111,6 +120,7 @@
 * Remove gcmt-lib generation by CMake
 * Support MSYS builds by CMake and configure
 * Update documentation about the incremental collector support
+* Workaround 'expression is only useful for its side effects' WCC warning
 * Workaround fread fail after enable_incremental if malloc redirected (Linux)
 
 
