Update AUTHORS file

--- a/AUTHORS
+++ b/AUTHORS
@@ -371,6 +371,7 @@ Shiro Kawai <shiro@lava.net>
 Simon Gornall <simon@gornall.net>
 Simon Posnjak <simon.posnjak@siol.net>
 Slava Sysoltsev <Viatcheslav.Sysoltsev@h-d-gmbh.de>
+Sorawee Porncharoenwase <sorawee.pwase@gmail.com>
 Stefan Ring <stefanrin@gmail.com>
 Stefano Rivera <stefano@rivera.za.net>
 Sugioka Toshinobu <sugioka@itonet.co.jp>
