--- a/ChangeLog
+++ b/ChangeLog
@@ -981,11 +981,15 @@ Also, includes 7.4.4 changes
 
 == [7.4.20] (not released yet) ==
 
+* Do not hold GC_fault_handler_lock when in Sleep (Windows)
+* Eliminate 'static GC_sysinfo definition has incomplete type' Clang warning
 * Eliminate 'unused function GC_add_map_entry' compiler warning
 * Eliminate 'while clause does not guard' GCC warning in GC_parse_map_entry
 * Fix OS_TYPE and USE_MMAP_ANON definitions for Cygwin/x64
 * Fix configure message about 'AIX gcc optimization fix'
 * Fix cordtest build in SMakefile.amiga
+* Prevent GetThreadContext failure (Windows)
+* Refactoring of WoW64 workaround (Win32)
 
 Also, includes 7.2o changes
 
@@ -1502,7 +1506,9 @@ Also, includes 7.2 changes
 
 == [7.2o] (not released yet) ==
 
+* Disable mprotect-based incremental GC if /proc roots are used (Linux)
 * Explicitly zero-initialize trace_buf (fix trace_buf initialization)
+* Fix 'ACCESS_VIOLATION in marker' GC warning on Win32 async thread start
 * Fix 'expected function body after declarator' clang error in gc_cpp.cc
 * Fix configure message about 'AIX gcc optimization fix'
 * Fix first_thread stack_base initialization if custom GC_stackbottom (Win32)
@@ -1512,6 +1518,8 @@ Also, includes 7.2 changes
 * Fix save_callers for multi-threaded case if built-in backtrace unavailable
 * Fix various typos mostly in documentation files
 * Fix word size, data start and alignment for OpenBSD/mips64(el)
+* Prevent WARN of incompatible incremental GC if default or manual VDB
+* Reduce a time period between GetExitCodeThread and SuspendThread (Win32)
 * Remove a misleading comment about Solaris in gc.h
 
 
