--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 * Add I_HOLD_LOCK assertion to expand_hp_inner and related functions
 * Add assertion that GC is initialized to base incremental_protection_needs
 * Add cordtest, staticrootstest, test_cpp, tracetest, disclaim tests (CMake)
+* Add debug messages on thread suspend/resume (Win32)
 * Add testing of GC_CALLOC/MALLOC_EXPLICITLY_TYPED (gctest)
 * Adjust formatting of numbered lists in README.md to match other .md files
 * Adjust highlighting of API prototypes in gcinterface.md
@@ -17,6 +18,7 @@
 * Build gccpp library by Makefile.direct, NT_MAKEFILE and WCC_MAKEFILE
 * Build shared libraries by default (WCC_MAKEFILE)
 * Check real-symbols are already initialized in pthread_join/detach
+* Collapse multiple includes of windows.h (code refactoring)
 * Comments reformatting in mark.c to properly delimit sentences
 * Compile de test GUI app with resources (CMake)
 * Compile gc.c unless building static libraries (NT_MAKEFILE, WCC_MAKEFILE)
@@ -24,6 +26,7 @@
 * Define STATIC macro to static by default
 * Do not build tests by default (Makefile.direct and other Makefiles)
 * Do not build the tests by default (CMake)
+* Do not define GC_write_cs for Xbox One target
 * Eliminate 'checking if unsigned i < 0' cppcheck FP in is_heap_base
 * Eliminate 'hash_val value is never used' cppcheck false positive
 * Eliminate 'stop variable is always 0' compiler warning in print_callers
@@ -38,11 +41,13 @@
 * Move QNX and Emscripten macro definitions to proper place in gcconfig.h
 * New API function to get size of object debug header
 * New API standalone functions to acquire and release the allocator lock
+* New macro (CONSOLE_LOG) to enable logging to console on Win32
 * New macro (GCTEST_PRINT_VERBOSE) to enable verbose logging in test.c only
 * New macro (NO_MSGBOX_ON_ERROR) to avoid message box on GC abort (Win32)
 * Pass -D GC_DLL -fvisibility=hidden if default configure build is requested
 * Print pid of child processes if verbose logging (gctest)
 * Refine flags field comment in pthread_support.h
+* Reformat code of GC_push_roots
 * Reformat gc.man (wrap long lines)
 * Reformatting and code refactoring of CMake script
 * Remove 'current users' section from overview.md
@@ -55,6 +60,8 @@
 * Remove documentation specific to particular old BDWGC releases
 * Remove gcmt-dll generation, rename libgc-lib.a to libgc.a (CMake)
 * Remove goto statement in print_callers (code refactoring)
+* Remove redundant GC_with_callee_saves_pushed call in multi-threaded builds
+* Remove redundant check of GC_free argument in register_finalizer
 * Remove redundant type casts in backgraph HEIGHT_UNKNOWN/IN_PROGRESS
 * Remove unused STACK_GRAN macro definitions (code refactoring)
 * Remove unused sparc_sunos4_mach_dep.s file
@@ -66,7 +73,9 @@
 * Replace "msecs" with "ms" in all comments and messages
 * Replace 'stack base' with 'stack bottom' in the documentation
 * Replace _M_AMD64 macro with _M_X64 (code refactoring)
+* Replace push_one calls with push_many_regs one for Win32 thread context
 * Report time with a nanosecond precision where available
+* Set GC_collecting hint for GC_collect_a_little_inner calls (pthreads)
 * Simplify logged message in scratch_recycle
 * Simplify loops of collect_a_little/stopped_mark invoking mark_some
 * Support CFLAGS_EXTRA to pass extra user-defined compiler flags (CMake)
@@ -79,23 +88,11 @@
 * Update the ASCII diagrams describing the tree structure for pointer lookups
 * Update the documentation to match the current GC implementation
 * Upgrade cmake_minimum_required(version) to 3.1
+* Use CreateThread without GC_ prefix in gctest (code refactoring)
 * Use KB/MB/GB abbreviations uniformly across entire documentation
 * Use atomic primitives for Sony PlayStation Portable 2 and PS4
 * Use better precision Windows timers
-* Workaround '*_stubborn function is never used' cppcheck warnings
-* Workaround 'GC_get_thr_restart_signal is never used' cppcheck warning
-* Workaround '__data_start<_etext is always false' cppcheck false positive
-* Workaround 'argument dummy to GC_noop1 is always 1' cppcheck false positive
-* Workaround 'checking if unsigned expression < 0' cppcheck warnings
-* Workaround 'condition (pred&1)==0 is always false' cppcheck false positive
-* Workaround 'duplicate expression for condition and assignment' cppcheck FP
-* Workaround 'identical inner return condition always true' cppcheck warning
-* Workaround 'if condition is the same as the previous one' cppcheck warnings
-* Workaround 'me assigned value never used' cppcheck FP in register_my_thread
-* Workaround 'name var reassign before old value use' cppcheck false positive
-* Workaround 'nl-result_buf is out of bounds' cppcheck false positive
-* Workaround 'uninitialized variable: info' cppcheck false positive (OS X)
-* Workaround 'var reassigned before old value use' cppcheck false positive
+* Workaround various cppcheck false positives
 
 
 == [8.0.6] (not released yet) ==
