Update AUTHORS file

--- a/AUTHORS
+++ b/AUTHORS
@@ -134,6 +134,7 @@ Davide Angelocola <davide.angelocola@tiscali.it>
 Demyan Kimitsa <demyan.kimitsa@gmail.com>
 Dick Porter <dick@acm.org>
 Dietmar Planitzer <dave.pl@ping.at>
+Dima Pasechnik <dimpase@gmail.com>
 Dimitris Vyzovitis <vyzo@media.mit.edu>
 Dimitry Andric <dim@freebsd.org>
 Djamel Magri <djamel.magri@googlemail.com>
