Update AUTHORS file (add Thomas Thiriez)

--- a/AUTHORS
+++ b/AUTHORS
@@ -390,6 +390,7 @@ Thomas Klausner <tk@giga.or.at>
 Thomas Linder Puls <thomas_linder_puls@hotmail.com>
 Thomas Maier <Thomas.Maier@uni-kassel.de>
 Thomas Schwinge <thomas@codesourcery.com>
+Thomas Thiriez <thomas@twistedwave.com>
 Thorsten Glaser <tg@debian.org>
 Tilman Vogel <Tilman.Vogel@web.de>
 Tim Bingham <tjb@zko.dec.com>
