Update AUTHORS file

--- a/AUTHORS
+++ b/AUTHORS
@@ -376,6 +376,7 @@ Simon Gornall <simon@gornall.net>
 Simon Posnjak <simon.posnjak@siol.net>
 Slava Sysoltsev <Viatcheslav.Sysoltsev@h-d-gmbh.de>
 Sorawee Porncharoenwase <sorawee.pwase@gmail.com>
+ssrlive <ssrlivebox@gmail.com>
 Stefan Ring <stefanrin@gmail.com>
 Stefano Rivera <stefano@rivera.za.net>
 Sugioka Toshinobu <sugioka@itonet.co.jp>
