Update AUTHORS file (add John David Anglin)

--- a/AUTHORS
+++ b/AUTHORS
@@ -215,6 +215,7 @@ Johannes Schmidt <jschmidt@avtrex.com>
 Johannes Totz <jtotz@ic.ac.uk>
 John Bowman <bowman@ualberta.ca>
 John Clements <clements@brinkerhoff.org>
+John David Anglin <dave.anglin@bell.net>
 John Ellis <ellis@xerox.parc.com>
 John Merryweather Cooper <jmerry@mono-cvs.ximian.com>
 Jon Moore <jonm@apache.org>
