--- a/ChangeLog
+++ b/ChangeLog
@@ -998,6 +998,7 @@ Also, includes 7.4.4 changes
 * Eliminate 'unused function GC_add_map_entry' compiler warning
 * Eliminate 'while clause does not guard' GCC warning in GC_parse_map_entry
 * Fix OS_TYPE and USE_MMAP_ANON definitions for Cygwin/x64
+* Fix abort in GC_printf when gctest is built as WinMain executable (Cygwin)
 * Fix configure message about 'AIX gcc optimization fix'
 * Fix cordtest build in SMakefile.amiga
 * Prevent GetThreadContext failure (Windows)
@@ -1522,6 +1523,7 @@ Also, includes 7.2 changes
 * Explicitly zero-initialize trace_buf (fix trace_buf initialization)
 * Fix 'ACCESS_VIOLATION in marker' GC warning on Win32 async thread start
 * Fix 'expected function body after declarator' clang error in gc_cpp.cc
+* Fix 'write to GC log failed' error
 * Fix configure message about 'AIX gcc optimization fix'
 * Fix first_thread stack_base initialization if custom GC_stackbottom (Win32)
 * Fix fread failure after enable_incremental if malloc is redirected (Linux)
