--- a/ChangeLog
+++ b/ChangeLog
@@ -2,13 +2,17 @@
 == [8.0.6] (not released yet) ==
 
 * Add support of OpenBSD/aarch64
+* Allocate start_info struct on the stack in GC_pthread_create
 * Allow GC_PAUSE_TIME_TARGET environment variable values smaller than 5 ms
 * Avoid compiler warning about unused d in GC_CALLOC/MALLOC_EXPLICITLY_TYPED
+* Compile C++ code with exception handling enabled in NT_MAKEFILE
 * Define OS_TYPE and DATAEND for UWP targets
 * Disable mprotect-based incremental GC if /proc roots are used (Linux)
 * Do not use Manual VDB mode if C malloc is redirected
+* Do not use iOS private symbols
 * Eliminate 'GC_old_bus_handler defined but not used' compiler warning
 * Eliminate 'comparing signed and unsigned values' BCC warning in cordtest
+* Eliminate 'gc_pthread_redirects.h should contain header guard' code defect
 * Eliminate 'possible loss of data' BCC and MS VC warnings
 * Eliminate 'static GC_sysinfo definition has incomplete type' Clang warning
 * Eliminate 'unused function' compiler warnings (GC_add_map_entry, GC_lock)
@@ -20,9 +24,12 @@
 * Fix 'condition pred!=NULL is always true' compiler warning
 * Fix 'external linkage required for var because of dllimport' error on MinGW
 * Fix 'ulong undefined' compilation error on AIX
+* Fix 'write to GC log failed' error (Cygwin)
 * Fix 'wrong finalization data' gctest failure on Windows
 * Fix MPROTECT_VDB definition for single-threaded GC builds
 * Fix OS_TYPE and USE_MMAP_ANON definitions for Cygwin/x64
+* Fix STACKBOTTOM on 32-bit HP/UX 11.11
+* Fix abort in GC_printf when gctest is built as WinMain executable (Cygwin)
 * Fix build for OS X (CMake)
 * Fix building of shared library with C++ support on MinGW
 * Fix compiling by Makefile.direct on OpenBSD/UltraSparc
@@ -31,6 +38,7 @@
 * Fix first_thread stack_base initialization if custom GC_stackbottom (Win32)
 * Fix gc_allocator.h compilation by Clang
 * Fix incorrect markup formatting in documentation
+* Fix mmap() failures on HP/UX
 * Fix mmap(PROT_NONE) failure on AIX
 * Fix printf format specifier in simple_example.md
 * Fix save_callers for multi-threaded case if built-in backtrace unavailable
@@ -39,6 +47,7 @@
 * Fix test_cpp failure when gc_cpp resides in a dll (Borland, Watcom)
 * Fix various typos mostly in documentation files
 * Fix word size, data start and alignment for OpenBSD/mips64(el)
+* New macro to avoid system-wide new/delete inlining in gc_cpp.h (Win32)
 * Prevent GetThreadContext failure (Windows)
 * Prevent WARN of incompatible incremental GC if default or manual VDB
 * Reduce a time period between GetExitCodeThread and SuspendThread (Win32)
