Update AUTHORS file (add Jonas Hahnfeld)

--- a/AUTHORS
+++ b/AUTHORS
@@ -225,6 +225,7 @@ John Ellis <ellis@xerox.parc.com>
 John Merryweather Cooper <jmerry@mono-cvs.ximian.com>
 Jon Moore <jonm@apache.org>
 Jonas Echterhoff <jonas@unity3d.com>
+Jonas Hahnfeld <hahnjo@hahnjo.de>
 Jonathan Bachrach <jonathan@harlequin.com>
 Jonathan Chambers <jonathan@unity3d.com>
 Jonathan Clark
