Update AUTHORS file

--- a/AUTHORS
+++ b/AUTHORS
@@ -278,6 +278,7 @@ Mark Weiser <weiser@ubiq.com>
 Martin Hirzel <hirzel@cs.colorado.edu>
 Martin Koeppe <mkoeppe@gmx.de>
 Martin Tauchmann <martintauchmann@bigfoot.com>
+Massimiliano Gubinelli <m.gubinelli@gmail.com>
 Matt Austern <austern@google.com>
 Matthew Flatt <mflatt@plt-scheme.org>
 Matthias Andree <matthias.andree@gmx.de>
