--- a/AUTHORS
+++ b/AUTHORS
@@ -193,6 +193,7 @@ Jacob Navia <jacob.navia@jacob.remcomp.fr>
 Jakub Jelinek <jakub@redhat.com>
 James Clark <jjc@jclark.com>
 James Dominy
+James Moran <jamesmo@unity3d.com>
 Jan Alexander Steffens <jan.steffens@gmail.com>
 Jan Wielemaker <J.Wielemaker@cs.vu.nl>
 Jani Kajala <jani@sumea.com>
