Update AUTHORS file (add Clement Chigot)

--- a/AUTHORS
+++ b/AUTHORS
@@ -106,6 +106,7 @@ Christian Thalinger <twisti@complang.tuwien.ac.at>
 Christian Weisgerber <naddy@openbsd.org>
 Christoffe Raffali <christophe.raffalli@univ-savoie.fr>
 Clay Spence <cds@peanut.sarnoff.com>
+Clement Chigot <clement.chigot@atos.net>
 Colin LeMahieu <clemahieu@gmail.com>
 Craig McDaniel <kreg7@bellsouth.net>
 Dai Sato <satodai@dog.intcul.tohoku.ac.jp>
