--- a/AUTHORS
+++ b/AUTHORS
@@ -383,6 +383,7 @@ Thomas Schwinge <thomas@codesourcery.com>
 Thorsten Glaser <tg@debian.org>
 Tilman Vogel <Tilman.Vogel@web.de>
 Tim Bingham <tjb@zko.dec.com>
+Tim Gates <tim.gates@iress.com>
 Timothy N. Newsham <newsham@wiliki.eng.hawaii.edu>
 Tom Tromey <tromey@cygnus.com>
 Tommaso Tagliapietra <tommaso.tagliapietra@enel.it>
