--- a/AUTHORS
+++ b/AUTHORS
@@ -430,6 +430,7 @@ Xi Wang <xi.wang@gmail.com>
 Xiaokun Zhu <xiaokun@aero.gla.ac.uk>
 Yann Dirson <dirson@debian.org>
 Yannis Bres <Yannis@bres.name>
+Yasuhiro Kimura <yasu@utahime.org>
 Yuki Okumura <mjt@cltn.org>
 Yusuke Suzuki <utatane.tea@gmail.com>
 Yvan Roux <yvan.roux@linaro.org>
