Update AUTHORS file (add Vineet Gupta)

--- a/AUTHORS
+++ b/AUTHORS
@@ -419,6 +419,7 @@ Uros Bizjak <ubizjak@gmail.com>
 Vernon Lee <scorpion@rice.edu>
 Victor Ivrii <ivrii@math.toronto.edu>
 Victor Romero <romerosanchezv@gmail.com>
+Vineet Gupta <vgupta@synopsys.com>
 Vitaly Magerya <vmagerya@gmail.com>
 Vladimir Tsichevski <wowa@jet.msk.su>
 Walter Bright <walter@walterbright.com>
