Update AUTHORS file (add Mahder Gebremedhin) (a cherry-pick of commit d2412eca0 from 'release-7_6')

--- a/AUTHORS
+++ b/AUTHORS
@@ -233,6 +233,7 @@ Loren J. Rittle <rittle@latour.labs.mot.com>
 Louis Zhuang <louis.zhuang@acm.org>
 Ludovic Courtes <ludo@gnu.org>
 Maarten Thibaut <mthibaut@cisco.com>
+Mahder Gebremedhin <mahder.gebremedhin@liu.se>
 Manuel Serrano <serrano@cornas.inria.fr>
 Marc Recht <recht@netbsd.org>
 Marco Maggi <marco.maggi-ipsu@poste.it>
