Update AUTHORS file (add Mahder Gebremedhin)

--- a/AUTHORS
+++ b/AUTHORS
@@ -262,6 +262,7 @@ Louis Zhuang <louis.zhuang@acm.org>
 Lucas Meijer <lucas@unity3d.com>
 Ludovic Courtes <ludo@gnu.org>
 Maarten Thibaut <mthibaut@cisco.com>
+Mahder Gebremedhin <mahder.gebremedhin@liu.se>
 Manuel A. Fernandez Montecelo <manuel.montezelo@gmail.com>
 Manuel Serrano <serrano@cornas.inria.fr>
 Marc Recht <recht@netbsd.org>
