Update AUTHORS file (add Matheus Rambo)

--- a/AUTHORS
+++ b/AUTHORS
@@ -282,6 +282,7 @@ Martin Hirzel <hirzel@cs.colorado.edu>
 Martin Koeppe <mkoeppe@gmx.de>
 Martin Tauchmann <martintauchmann@bigfoot.com>
 Massimiliano Gubinelli <m.gubinelli@gmail.com>
+Matheus Rambo <mrambo@grupodimed.com.br>
 Matt Austern <austern@google.com>
 Matthew Flatt <mflatt@plt-scheme.org>
 Matthias Andree <matthias.andree@gmx.de>
