Update AUTHORS file (add George Koehler)

--- a/AUTHORS
+++ b/AUTHORS
@@ -163,6 +163,7 @@ Friedrich Dominicus <friedrichdominicus@googlemail.com>
 Gabor Drescher <gabor.drescher@cs.fau.de>
 Gary Leavens <leavens@eecs.ucf.edu>
 Geoff Norton <grompf@sublimeintervention.com>
+George Koehler <kernigh@gmail.com>
 George Talbot <Gtalbot@ansarisbio.com>
 Gerard A Allan
 Glauco Masotti <glauco.masotti@libero.it>
