Update AUTHORS file

--- a/AUTHORS
+++ b/AUTHORS
@@ -311,6 +311,7 @@ Naoyuki Sawa <sawa_naoyuki-1@yahoo.co.jp>
 Nathanael Nerode <neroden@twcny.rr.com>
 Neale Ferguson <neale@mono-cvs.ximian.com>
 Neil Sharman <neil@cs.mu.oz.au>
+Nguyen Thai Ngoc Duy <pclouds@gmail.com>
 Nicolas Cannasse <ncannasse@motion-twin.com>
 Niibe Yutaka <gniibe@fsij.org>
 Nikita Ermakov <coffe92@gmail.com>
