Update AUTHORS file (add Steve Youngs)

--- a/AUTHORS
+++ b/AUTHORS
@@ -389,6 +389,7 @@ Sorawee Porncharoenwase <sorawee.pwase@gmail.com>
 ssrlive <ssrlivebox@gmail.com>
 Stefan Ring <stefanrin@gmail.com>
 Stefano Rivera <stefano@rivera.za.net>
+Steve Youngs <steve@sxemacs.org>
 Sugioka Toshinobu <sugioka@itonet.co.jp>
 Suzuki Toshiya <mpsuzuki@hiroshima-u.ac.jp>
 Sven Hartrumpf <Sven.Hartrumpf@fernuni-hagen.de>
