--- a/AUTHORS
+++ b/AUTHORS
@@ -408,6 +408,7 @@ Thomas Thiriez <thomas@twistedwave.com>
 Thorsten Glaser <tg@debian.org>
 Tilman Vogel <Tilman.Vogel@web.de>
 Tim Bingham <tjb@zko.dec.com>
+Tim Cannell <timcannell@unity3d.com>
 Tim Gates <tim.gates@iress.com>
 Timothy N. Newsham <newsham@wiliki.eng.hawaii.edu>
 Tom Tromey <tromey@cygnus.com>
