Update AUTHORS file (add Zhang Na)

--- a/AUTHORS
+++ b/AUTHORS
@@ -442,6 +442,7 @@ Yuki Okumura <mjt@cltn.org>
 Yusuke Suzuki <utatane.tea@gmail.com>
 Yvan Roux <yvan.roux@linaro.org>
 Zach Saw <zach.saw@gmail.com>
+Zhang Na <zhangna@loongson.cn>
 Zhiying Chen
 Zhong Shao <zhong.shao@yale.edu>
 Zoltan Varga <vargaz@gmail.com>
