Update AUTHORS file

--- a/AUTHORS
+++ b/AUTHORS
@@ -378,6 +378,7 @@ Salvador Eduardo Tropea <salvador@inti.gov.ar>
 Samuel Martin <s.martin49@gmail.com>
 Samuel Thibault <samuel.thibault@gnu.org>
 Scott Ananian <cananian@lesser-magoo.lcs.mit.edu>
+Scott Ferguson <scott.ferguson@unity3d.com>
 Scott Schwartz <schwartz@groucho.cse.psu.edu>
 Shawn Wagner <shawnw@speakeasy.org>
 Shea Levy <shea@shealevy.com>
